--- a/messenger/index.html
+++ b/messenger/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
 	<head>
-		<meta name="viewport" content="initial-scale=1.0, user-scalable=no, width=device-width" />
+		<meta name="viewport" content="initial-scale=1.0, user-scalable=yes, width=device-width" />
 		<title></title>
 		
 		<!-- Kendo UI Mobile styles for all supported platforms -->
