--- a/messenger/index.html
+++ b/messenger/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
 	<head>
-		<meta name="viewport" content="initial-scale=1.0, user-scalable=yes, width=device-width" />
+		<meta name="viewport" content="initial-scale=1.0, user-scalable=yes, width=device-width, maximum-scale=5.0" />
 		<title></title>
 		
 		<!-- Kendo UI Mobile styles for all supported platforms -->
@@ -15,7 +15,7 @@
 		<script src="http://cdn.kendostatic.com/2012.2.710/js/kendo.all.min.js"></script>
 
 		<script src="phonegap.js" type="text/javascript" charset="utf-8"></script>
-        <script src="assets/js/iscroll.js"></script>
+<!--        <script src="assets/js/iscroll.js"></script>-->
 		<script type="text/javascript" src="assets/js/app.js"></script>
 		<script type="text/x-kendo-templ" id="reddit-template">
 			#: title #
@@ -25,7 +25,6 @@
  		
  		<!-- The "layout" defines the common navbar and footer. Views are then swapped
  			 out as the content between this common header and footer -->
-    <div id="wrapper">
 		<div data-role="layout" data-id="main-layout">
 			<div data-role="header">
 				<div data-role="navbar">
@@ -53,6 +52,5 @@
 		<div data-role="view" data-layout="main-layout" id="settings" data-title="Settings">
 			<p>Settings</p>
 		</div>	
-    </div>
 	</body>
 </html>
