--- a/messenger/index.html
+++ b/messenger/index.html
@@ -25,8 +25,7 @@
  		
  		<!-- The "layout" defines the common navbar and footer. Views are then swapped
  			 out as the content between this common header and footer -->
-    <div id="wrapper">
-		<div data-role="layout" data-id="main-layout">
+		<div id="main" data-role="layout" data-id="main-layout">
 			<div data-role="header">
 				<div data-role="navbar">
 					<span data-role="view-title"></span>
@@ -53,6 +52,5 @@
 		<div data-role="view" data-layout="main-layout" id="settings" data-title="Settings">
 			<p>Settings</p>
 		</div>	
-    </div>
 	</body>
 </html>
