--- a/messenger/index.html
+++ b/messenger/index.html
@@ -22,10 +22,10 @@
 		</script>
 	</head>
 	<body>
- 		
+ 		<div id="main">
  		<!-- The "layout" defines the common navbar and footer. Views are then swapped
  			 out as the content between this common header and footer -->
-		<div id="main" data-role="layout" data-id="main-layout">
+		<div data-role="layout" data-id="main-layout">
 			<div data-role="header">
 				<div data-role="navbar">
 					<span data-role="view-title"></span>
@@ -51,6 +51,7 @@
 
 		<div data-role="view" data-layout="main-layout" id="settings" data-title="Settings">
 			<p>Settings</p>
-		</div>	
+		</div>
+    </div>             	
 	</body>
 </html>
