--- a/messenger/index.html
+++ b/messenger/index.html
@@ -1,7 +1,8 @@
 <!doctype html>
 <html>
 	<head>
-		<meta name="viewport" content="initial-scale=1.0, user-scalable=yes, width=device-width" />
+		<!--<meta name="viewport" content="initial-scale=1.0, user-scalable=yes, width=device-width" />-->
+        <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1, minimum-scale=1, maximum-scale=4, user-scalable=1">
 		<title></title>
 		
 		<!-- Kendo UI Mobile styles for all supported platforms -->
