adding fidget to support pinch zoom

--- a/messenger/index.html
+++ b/messenger/index.html
@@ -11,7 +11,7 @@
 		<link rel="stylesheet" href="assets/css/master.css">
 
 		<script type="text/javascript" src="assets/js/jquery.min.js"></script>
-
+        <script src="assets/js/jquery.fidget.js"></script>
 		<!-- Kendo UI JavaScript -->
 		<script src="http://cdn.kendostatic.com/2012.2.710/js/kendo.all.min.js"></script>
 
@@ -24,7 +24,7 @@
 	<body>
  		<!-- The "layout" defines the common navbar and footer. Views are then swapped
  			 out as the content between this common header and footer -->
-		<div data-role="layout" data-id="main-layout">
+		<div id="main" data-role="layout" data-id="main-layout">
 			<div data-role="header">
 				<div data-role="navbar">
 					<span data-role="view-title"></span>
