--- a/messenger/index.html
+++ b/messenger/index.html
@@ -11,7 +11,6 @@
 		<link rel="stylesheet" href="assets/css/master.css">
 
 		<script type="text/javascript" src="assets/js/jquery.min.js"></script>
-        <script src="assets/js/jquery.fidget.js"></script>
 		<!-- Kendo UI JavaScript -->
 		<script src="http://cdn.kendostatic.com/2012.2.710/js/kendo.all.min.js"></script>
 
@@ -43,7 +42,7 @@
 			 data-layout="main-layout" where "main-layout" is the data-id of the desired
 			 layout -->
 
-		<div id="homeView" data-role="view" data-show="MYAPP.show" data-layout="main-layout" id="home" data-title="Home">
+		<div data-role="view" data-show="MYAPP.show" data-layout="main-layout" id="home" data-title="Home">
 			<p>Home</p>
 			<ul data-role="listview" data-style="inset" data-template="reddit-template" data-source="MYAPP.reddit"></ul>			
 		</div>
